public class Salida {

    public void pinta(int[][] matriz) {
        // TODO: pinta
    }

}
